<resources>
    <string name="app_name">A2</string>
    <string name="monthYear">April 2024</string>
    <string name="arrowForward"><![CDATA[—>]]></string>
    <string name="arrowBackward"><![CDATA[<—]]></string>
    <string name="sat">SAT 21 February 2002</string>
    <string name="fri">FRI</string>
    <string name="thur">THUR</string>
    <string name="wed">WED</string>
    <string name="tue">TUE</string>
    <string name="mon">MON</string>
    <string name="sun">SUN</string>
    <string name="new_meeting">New Meeting</string>
    <string name="upcoming_meetings">Upcoming Meetings For this Week</string>
    <string name="date_view">Date: April 1, 2024</string>
    <string name="create_new_event">Create New Meeting</string>
    <string name="more_options">More Options</string>
    <string name="select_a_date_below">Select a date Below</string>
    <string name="select_time">Select a meeting time</string>
    <string name="selected_time">Selected Time:</string>
    <string name="save_meeting">SAVE MEETING</string>
    <string name="event_name">Meeting Name: </string>
    <string name="add_participants">Add Participants</string>
    <string name="meetings_today">Meetings Today</string>
    <string name="event">Brandon Created Meeting</string>
    <string name="menu">MENU</string>
    <string name="new_meetingTool">New Meeting</string>
    <string name="clear_all_meetings">Clear All Meetings</string>
    <string name="contacts">Contacts</string>
    <string name="clear_today_s_meetings">Clear Today\'s Meetings</string>
    <string name="push_today_s_meetings">Push Today\'s Meetings</string>
    <string name="push_week_s_meetings">Push Week\'s Meetings</string>
    <string name="_21_00">21:00</string>
    <string name="no_meetings_scheduled_for_today">No Meetings Scheduled for Today</string>
    <string name="no_meetings_scheduled_for_week">No Additional Meetings Scheduled for This Week</string>
    <string name="add_contact">Add Contact</string>
    <string name="email">bf22wk@brocku.ca</string>
    <string name="phone">123-456-7890</string>
    <string name="contact_name">Brandon F</string>
    <string name="manage_your_contacts">Manage Your Contacts</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="selected_participant">Selected Participant:</string>
    <string name="clear_expired_meetings">Clear Expired Meetings</string>
    <string name="participant_jose">Participant: Jose</string>
    <string name="time">Time:</string>
    <string name="change_participant">Change Participant</string>
    <string name="selected_date">Selected Date:</string>
    <string name="delete_meeting">Delete Meeting</string>
    <string name="save_changes">Save Changes</string>
    <string name="postpone_meeting">Postpone Meeting</string>
    <string name="view_meeting">View Meeting</string>
    <string name="no_contact">No Contact</string>
</resources>