<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context=".CreateEventActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:overScrollMode="always"
    android:scrollbars="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/arrowBackward"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="endAction"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/dateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/create_new_event"
        android:textColor="@color/orange"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/event_name"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/eventNameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:ems="10"
        android:inputType="text"
        android:autofillHints="name"
        android:hint="@string/event_name"
        android:textColor="@color/gray"

        />

    <TextView
        android:id="@+id/chooseDateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/select_a_date_below"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"/>

    <CalendarView
        android:id="@+id/createCalendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:theme="@style/CalenderViewCustom"
        android:background="@color/colorPrimary"
        android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/selectedTimeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/selected_time"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/pickTime"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue"
            android:textColor="@color/black"
            android:onClick="selectTime"
            android:text="@string/select_time"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/selected_participant"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/contactsList"
            android:layout_height="wrap_content"
            android:overScrollMode="ifContentScrolls"/>

        <Button
            android:id="@+id/addParticipants"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue"
            android:onClick="selectParticipant"
            android:text="@string/add_participants"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/saveMeeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/orange"
            android:textColor="@color/black"
            android:onClick="saveEventAction"
            android:text="@string/save_meeting"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
</ScrollView>