<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpecificEvent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/arrowBackward"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="endAction"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/dateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="View Meeting"
        android:textColor="@color/green"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/event_name"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/selectedNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/select_a_date_below"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/selected_date"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/selectedDateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/select_a_date_below"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/selected_time"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/selectedTimeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/select_a_date_below"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/selected_participant"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/noContactsTV"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contactsList"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        tools:listitem="@layout/contact_cell" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/blue"
            android:onClick="postponeMeeting"
            android:text="@string/postpone_meeting"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/orange"
            android:onClick="deleteMeeting"
            android:text="@string/delete_meeting"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>