<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@color/gray"
    android:layout_marginVertical="2dp"
    >

    <LinearLayout
        android:layout_width = "match_parent"
        android:paddingVertical="8dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:id="@+id/eventNameTV"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/event"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:id="@+id/participantNameTV"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/participant_jose"/>


        <LinearLayout
            android:layout_width = "match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:id="@+id/eventDateTV"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="Date"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/time"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="4dp"
                android:id="@+id/eventTimeTV"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/_21_00"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>