<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageContacts"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/arrowBackward"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="endAction"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/dateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/manage_your_contacts"
        android:textColor="@color/orange"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/noContactsTV"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/contactsList"
        android:layout_height="0dp"
        android:overScrollMode="ifContentScrolls"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue"
            android:text="@string/add_contact"
            android:onClick="createContact"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginEnd="8dp"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/orange"
            android:text="@string/delete_contact"
            android:onClick="createContact"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>