<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    android:layout_marginVertical="2dp"
    app:cardBackgroundColor="@color/gray"
    >

    <LinearLayout
        android:layout_width = "match_parent"
        android:paddingVertical="8dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width = "match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:maxWidth="180dp"
                android:layout_height="wrap_content"
                android:maxHeight="50dp"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:id="@+id/contactNameTV"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:overScrollMode="ifContentScrolls"
                android:text="@string/contact_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:id="@+id/contactPhoneTV"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:maxHeight="50dp"
                android:overScrollMode="ifContentScrolls"
                android:text="@string/phone"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:id="@+id/contactEmailTV"
            android:textSize="20sp"
            android:maxHeight="50dp"
            android:textColor="@color/black"
            android:overScrollMode="ifContentScrolls"
            android:text="@string/email"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>