<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            app:titleTextColor="@color/black"
            app:title="A2"
            android:background="#91BCAF"
            />

    <TextView
        android:id="@+id/dateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/date_view"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingVertical="16dp"/>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:theme="@style/CalenderViewCustom"
        android:background="@color/colorPrimary"
        android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/meetings_today"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:paddingVertical="8dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/noMeetingsTV"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text=""
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:paddingVertical="8dp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/meetingRecyclerView"
        android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="vertical"
            android:textColor="@color/black"
            tools:listitem="@layout/event_view"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/newEvent"
                android:layout_gravity="center"
                android:backgroundTint="@color/blue"
                android:text="@string/new_meeting"
                android:onClick="newEventAction"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_meetings"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/orange"
            />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/noMeetingsWeekTV"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text=""
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:paddingVertical="8dp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcomingRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/gray"
            android:scrollbars="vertical"
            tools:listitem="@layout/event_view"/>

    </LinearLayout>


</LinearLayout>
</ScrollView>